@@ -1,6 +1,8 @@
 20020722
  - (bal) AIX tty data limiting patch fix by leigh@solinno.co.uk
  - (stevesk) [xmmap.c] missing prototype for fatal()
+ - (bal) [configure.ac defines.h loginrec.c sshd.c sshpty.c] Partial sync
+   with Cray (mostly #ifdef renaming).  Patch by wendyp@cray.com.
 
 20020721
  - (stevesk) [auth-pam.c] merge cosmetic changes from solar's
